[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-analytics"
version = "0.1.0"
description = "ML-driven futures analytics pipeline — feature engineering, model training, and live inference for NQ futures and options"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Vadim Basin", email = "vadimbasin@yahoo.com"},
]
keywords = ["machine-learning", "futures", "options", "feature-engineering", "timeseries"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "databento>=0.74",
    "databento-dbn>=0.52",
    "numpy>=2.0",
    "pandas>=2.1",
    "psycopg[binary,pool]>=3.1",
    "python-dotenv>=1.0",
    "PyWavelets>=1.5",
    "scikit-learn>=1.4",
    "scipy>=1.12",
    "structlog>=24.0",
    "tensorflow>=2.16",
    "pyarrow>=15.0",
    "zstandard>=0.22",
]

[project.optional-dependencies]
training = [
    "optuna>=3.6",
    "mlflow>=2.14",
    "matplotlib>=3.8",
    "tqdm>=4.66",
]
serving = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "gunicorn>=22.0",
    "pydantic>=2.7",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]
all = ["ml-analytics[training,serving,dev]"]

[project.urls]
Repository = "https://github.com/vbasin/ML_analytics"

[project.scripts]
vtech-features = "features.engine:main"

# ---------------------------------------------------------------------------
# Setuptools – src layout
# ---------------------------------------------------------------------------
[tool.setuptools.packages.find]
where = ["src"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["acquisition", "common", "features", "ingestion", "models", "training"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -q"

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
warn_unused_configs = true
warn_return_any = true
disallow_untyped_defs = false
